--- a/index.html
+++ b/index.html
@@ -31,23 +31,23 @@
       </div>
   <hr>
   <div class="skills">
-    <h2>My Skills.</h2>
+    <h2>What Can I do</h2>
     <div class="skill-row">
       <img class="code-img" src="images/computer.png" alt="skills">
-      <h3>Lorem & Ipsum</h3>
-      <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+      <h3>Design what you want.</h3>
+      <p>I like to keep it simple. My goals are to focus on typography, content and conveying the message that you want to send.</p>
     </div>
     <div class="skill-row">
       <img class="chilli-img" src="images/chillies.png" alt="skills-row">
-      <h3>Lorem Ipsum Dolor</h3>
-      <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+      <h3>Develop what you need.</h3>
+      <p>I'm a developer, so I know how to create your website to run across devices using the latest technologies available.</p>
     </div>
   </div>
   <hr>
   <div class="contact-me">
     <h2>Get In Touch</h2>
-    <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-    <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+    <h3>I can help.</h3>
+    <p>If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get in touch.</p>
     <a class="btn" href="mailto:mdrhmn46@gmail.com">CONTACT ME</a>
   </div>
 </div>
